--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Thanathip Limna <boatkrap@gmail.com>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -14,6 +15,10 @@ asyncpg = "^0.29.0"
 pydantic-settings = "^2.4.0"
 passlib = "^1.7.4"
 pyjwt = "^2.9.0"
+aiosqlite = "^0.20.0"
+locust = "^2.31.3"
+asyncio = "^3.4.3"
+pytest-asyncio = "^0.24.0"
 
 
 [build-system]
